<resources>
    <string name="app_name" translatable="false">Awaree</string>
    <string name="yes">Da</string>
    <string name="no">Nu</string>

    <!-- Strings related to login -->
    <string name="invalid_username">Username invalid sau deja exista</string>
    <string name="invalid_password">Parola trebuie sa aiba >6 caractere</string>
    <string name="login_failed">Login esuat</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Parola</string>
    <string name="passwordForgot">Ți-ai uitat parola?</string>
    <string name="login" translatable="false">Login</string>
    <string name="register">Înregristrare</string>
    <string name="username">Nume de utilizator</string>
    <string name="needAccount">Nu ai cont?</string>
    <string name="alreadyHaveAccount">Ai deja un cont?</string>

    <!-- Strings related to questions -->
    <string name="question_01">Ce specializare ești?</string>
    <string name="question_02">Ce serie ești?</string>
    <string name="question_03">Ce grupă ești?</string>
    <string name="question_04">Participi la activității facultative?</string>
    <string name="answer">Răspuns</string>
    <string name="welcome_back">Bine ai revenit</string>

    <!-- Strings related to subjects -->
    <string name="courses">Cursuri</string>
    <string name="seminaries">Seminarii</string>
    <string name="labs">Laboratoare</string>
    <string name="exam_true">Examen</string>
    <string name="exam_false">Verificare</string>

    <!-- Settings Titles -->
    <string name="profile_header">Profil</string>
    <string name="app_header">Setari Aplicatie</string>

    <!-- Profile Preferences -->
    <string name="account_title">Editeaza profilul</string>
    <string name="password_title">Schimba parola</string>

    <!-- App Preferences -->
    <string name="notifications_title">Notificari push</string>
    <string name="logout_title">Log out</string>
    <string name="delete_title">Delete account</string>
    <string name="delete_summary">This is going to delete it forever</string>

    <string-array name="languages">
        <item>Romanian</item>
        <item>English</item>
    </string-array>

    <!-- Errors -->
    <string name="taken_error">Username taken.</string>
    <string name="user_short_error">Username length should be at least 3 characters.</string>
    <string name="pass_short_error">Password length should be over 5 characters.</string>
    <string name="pass_num_error">Password should have at least one digit.</string>
    <string name="empty_error">Trebuie sa introduci un titlu</string>
    <string name="select_error">Selecteaza un obiect</string>
    <string name="no_hw">There\'s nothing here, please add a new homework</string>
    <string name="email_error">Please enter your email address first.</string>
    <string name="password_error">Please enter your password.</string>
    <string name="pass_inc_error">Incorrect password.</string>
    <string name="email_inv_error">Invalid email address.</string>
    <string name="email_inex_error">Email not registered.</string>
    <string name="user_error">Please enter a username.</string>
    <string name="email_taken_error">Email address already registered.</string>

    <string name="homeworkTitle">Tema</string>
    <string name="subject">Materie</string>
    <string name="dueDate">Data de predare</string>
    <string name="timeNeeded">Timp de lucrare</string>
    <string name="difficulty">Difficultate</string>
    <string name="priority">Prioritate</string>

    <string-array name="difficulties">
        <item>Floare la ureche</item>
        <item>Prea usor</item>
        <item>Usor</item>
        <item>Mediu</item>
        <item>Greu</item>
        <item>Imposibil</item>
    </string-array>
    <string-array name="priority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="greetings">
        <item>Welcome back, </item>
        <item>Hello there, </item>
    </string-array>

    <string-array name="sortBy">
        <item>Subject name</item>
        <item>Credits</item>
        <item>Exam type</item>
    </string-array>
    <string-array name="upDown">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

</resources>
