<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/login_01"
                android:layout_width="341dp"
                android:layout_height="224dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/login_02" />

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_default"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/registerUsername"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_default"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/passwor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_default"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/registerButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/josefinsans_bold"
                android:textSize="16dp"
                android:text="@string/email"
                app:layout_constraintBottom_toTopOf="@+id/registerEmail"
                app:layout_constraintStart_toStartOf="@+id/registerEmail" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/josefinsans_bold"
                android:textSize="16dp"
                android:text="@string/username"
                app:layout_constraintBottom_toTopOf="@+id/registerUsername"
                app:layout_constraintStart_toStartOf="@+id/registerUsername" />

            <TextView
                android:id="@+id/passwor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/josefinsans_bold"
                android:textSize="16dp"
                android:text="@string/password"
                app:layout_constraintBottom_toTopOf="@+id/registerPassword"
                app:layout_constraintStart_toStartOf="@+id/registerPassword" />

            <TextView
                android:id="@+id/alreadyHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/josefinsans_bold"
                android:textSize="16dp"
                android:text="@string/alreadyHaveAccount"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/registerButton"
                app:layout_constraintStart_toStartOf="@+id/registerButton" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="128dp"
                android:layout_marginEnd="128dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_default"
                android:fontFamily="@font/josefinsans_bold"
                android:textSize="16dp"
                android:text="@string/register"
                app:layout_constraintBottom_toTopOf="@+id/alreadyHaveAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/errorEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

            <TextView
                android:id="@+id/errorUsernameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/username"
                app:layout_constraintTop_toBottomOf="@+id/registerUsername" />

            <TextView
                android:id="@+id/errorPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/passwor"
                app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>